welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
def trace()
{
  baisseBrosse()
  leveBrosse()
}

def faireV()
{
  avance()
  avance()
  trace()
  avance()
  gauche()
  avance()
  trace()
  recule()
  droite()
  avance()
  trace()
  avance()
  avance()
  gauche()
}

def faireMotif()
{
  for (i <- 1 to 4)
    faireV()
}

def faireLigne()
{
  for (i <- 1 to 3)
  {
    faireV()
    avancer(7)
  }
}


override def run()
{
  for (i <- 1 to 3)
  {
  	faireLigne()
    reculer(21)
    gauche()
    avancer(7)
    droite()
  }
}